crates/solidity/testing/snapshots/bindings_output/errors/selector/generated/v1/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
   ╭─[input.sol:2:20]
   │
 2 │     error TestError();
   │                    ─┬  
   │                     ╰── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     error TestError();
   │     ──┬── ────┬────  
   │       ╰────────────── unresolved
   │               │      
   │               ╰────── name: 2
   │ 
 4 │     function test() public {
   │              ──┬─  
   │                ╰─── name: 3
 5 │         TestError.selector;
   │         ────┬──── ────┬───  
   │             ╰─────────────── ref: 2
   │                       │     
   │                       ╰───── unresolved
───╯
Definiens: 
   ╭─[input.sol:1:1]
   │
 1 │ ╭───▶ contract Test {
 2 │ │ │       error TestError();
   │ │ │   ───────────┬───────────  
   │ │ │              ╰───────────── definiens: 2
 3 │ │ ╭─▶ 
   ┆ ┆ ┆   
 6 │ │ ├─▶     }
   │ │ │           
   │ │ ╰─────────── definiens: 3
 7 │ ├───▶ }
   │ │         
   │ ╰───────── definiens: 1
───╯
